Add logout step

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,6 +25,8 @@ jobs:
       - name: Build all
         run: nix build -L -vv '.#defaultPackage.${{ matrix.arch }}'
 
+      - run: sudo tailscale logout
+      
       - name: Cache
         uses: shopstic/tailscale-nix-builder/cache@5d038bf4bfb3dea2f3b588efe6388796e263c6d4
         with:
