--- a/images/strimzi-debezium-postgresql/context/Dockerfile
+++ b/images/strimzi-debezium-postgresql/context/Dockerfile
@@ -5,4 +5,4 @@ RUN \
   mkdir -p /opt/kafka/plugins/debezium/ && \
   curl -Lo - https://repo1.maven.org/maven2/io/debezium/debezium-connector-postgres/1.9.0.Final/debezium-connector-postgres-1.9.0.Final-plugin.tar.gz | \
   tar -xz -C /opt/kafka/plugins/debezium/ --strip-components=1
-USER 1001
+USER 1001:root
