Ensure image build reproducibility

--- a/images/confluent-community/context/Dockerfile
+++ b/images/confluent-community/context/Dockerfile
@@ -1,10 +1,16 @@
 ARG fromTag
 ARG fromDigest
-FROM docker.io/eclipse-temurin:$fromTag@$fromDigest
+FROM public.ecr.aws/docker/library/eclipse-temurin:$fromTag@$fromDigest
 
 RUN \
-  groupadd --gid 1001 app && \
-  useradd --home-dir /home/app --create-home --uid 1001 \
-  --gid 1001 --shell /bin/bash --skel /dev/null app
+  echo "app:x:1001:1001::/home/app:/bin/bash" >> /etc/passwd && \
+  echo "app:!::0:99999:7:::" >> /etc/shadow && \
+  echo "app:x:1001:" >> /etc/group && \
+  echo "app:!::" >> /etc/gshadow && \
+  echo "app:!::" >> /etc/gshadow && \
+  echo "app:100000:65536" >> /etc/subuid && \
+  echo "app:100000:65536" >> /etc/subgid && \
+  mkdir -p /home/app && \
+  chown app:app /home/app
 
 USER app:app
