--- a/images/pod-gateway/context/Dockerfile
+++ b/images/pod-gateway/context/Dockerfile
@@ -5,3 +5,4 @@ FROM docker.io/ubuntu:$fromTag@$fromDigest
 COPY config /default_config
 COPY config /config
 COPY bin /bin
+COPY etc/protocols /etc/protocols
