Pin ecr-public get-login-password to us-east-1

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: Login
         shell: nix develop -v -c bash {0}
         run: |-
-          aws ecr-public get-login-password | docker login --username AWS --password-stdin "${IMAGE_REPOSITORY}"
+          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin "${IMAGE_REPOSITORY}"
 
       - name: Build and push images
         shell: nix develop -v -c bash {0}
