--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,12 +1,15 @@
 name: Build
 on: [push]
 jobs:
-  build-images:
-    runs-on: [self-hosted, nix]
+  build-push-images:
+    runs-on: [self-hosted, nix, "${{ matrix.arch }}-linux", medium]
     env:
       IMAGE_REPOSITORY: public.ecr.aws/shopstic
+    strategy:
+      matrix:
+        arch: [amd64, arm64]  
     steps:
-      - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579
+      - uses: actions/checkout@v3
 
       - name: Login
         shell: nix develop -v -c bash {0}
@@ -16,30 +19,51 @@ jobs:
       - name: Build and push images
         shell: nix develop -v -c bash {0}
         run: |
-          ./cli.sh build_push_images
+          ./cli.sh build_push_all_single_arch_images ${{ matrix.arch }}
+
+  push-manifests:
+    runs-on: [self-hosted, nix, arm64-linux, small]
+    needs: [build-push-images]
+    env:
+      IMAGE_REPOSITORY: public.ecr.aws/shopstic
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Login
+        shell: nix develop -v -c bash {0}
+        run: |-
+          aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin "${IMAGE_REPOSITORY}"
+
+      - name: Build and push images
+        shell: nix develop -v -c bash {0}
+        run: |
+          ./cli.sh push_all_manifests
 
   build-packages:
-    runs-on: [self-hosted, nix]
+    runs-on: [self-hosted, nix, "${{ matrix.arch.runner }}", medium]
     strategy:
       matrix:
         arch:
-          - aarch64-linux
-          - aarch64-darwin
-          - x86_64-linux
+          - nix: x86_64-linux
+            runner: amd64-linux
+          - nix: aarch64-linux
+            runner: arm64-linux
+          - nix: aarch64-darwin
+            runner: arm64-darwin
     steps:
-      - uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579
+      - uses: actions/checkout@v3
 
       - name: Test
         run: |
           cd ./tests
-          nix build -L -v --no-link '.#defaultPackage.${{ matrix.arch }}'
+          nix build -L -v --no-link '.#defaultPackage.${{ matrix.arch.nix }}'
 
       - name: Build all packages
-        run: nix build -L -v '.#defaultPackage.${{ matrix.arch }}'
+        run: nix build -L -v '.#defaultPackage.${{ matrix.arch.nix }}'
 
       - name: Cache all packages
         env:
-          NIX_OUTPUT: .#defaultPackage.${{ matrix.arch }}
+          NIX_OUTPUT: .#defaultPackage.${{ matrix.arch.nix }}
         run: |
           nix store sign "${NIX_OUTPUT}" -v -r -k ~/.secrets/nix-cache-private-key
           nix copy -v "${NIX_OUTPUT}" --to s3://nixed/cache
