--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,13 +1,33 @@
 name: Build
 on: [push]
 jobs:
-  build-push-images:
-    runs-on: [self-hosted, nix, "${{ matrix.arch }}-linux", medium]
+  build-images:
+    runs-on: [self-hosted, nix, "${{ matrix.arch.runner }}-linux", medium]
     env:
       IMAGE_REPOSITORY: public.ecr.aws/shopstic
     strategy:
       matrix:
-        arch: [amd64, arm64]  
+        arch:
+          - nix: x86_64
+            runner: amd64
+          - nix: aarch64
+            runner: arm64
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Build all images
+        shell: nix develop -v -c bash {0}
+        run: |
+          ./cli.sh build_all_images ${{ matrix.arch.nix }}
+
+  push-images:
+    runs-on: [self-hosted, nix, "${{ matrix.arch }}-linux", medium]
+    needs: [build-images]
+    env:
+      IMAGE_REPOSITORY: public.ecr.aws/shopstic
+    strategy:
+      matrix:
+        arch: [amd64, arm64]
     steps:
       - uses: actions/checkout@v3
 
@@ -19,11 +39,11 @@ jobs:
       - name: Build and push images
         shell: nix develop -v -c bash {0}
         run: |
-          ./cli.sh build_push_all_single_arch_images ${{ matrix.arch }}
+          ./cli.sh push_all_single_arch_images ${{ matrix.arch }}
 
   push-manifests:
     runs-on: [self-hosted, nix, arm64-linux, small]
-    needs: [build-push-images]
+    needs: [push-images]
     env:
       IMAGE_REPOSITORY: public.ecr.aws/shopstic
     steps:
@@ -40,30 +60,39 @@ jobs:
           ./cli.sh push_all_manifests
 
   build-packages:
-    runs-on: [self-hosted, nix, "${{ matrix.arch.runner }}", medium]
+    runs-on:
+      [
+        self-hosted,
+        nix,
+        "${{ matrix.runner.runner }}",
+        "${{ matrix.runner.size }}",
+      ]
     strategy:
       matrix:
-        arch:
-          - nix: x86_64-linux
+        runner:
+          - arch: x86_64-linux
             runner: amd64-linux
-          - nix: aarch64-linux
+            size: medium
+          - arch: aarch64-linux
             runner: arm64-linux
-          - nix: aarch64-darwin
+            size: medium
+          - arch: aarch64-darwin
             runner: arm64-darwin
+            size: small
     steps:
       - uses: actions/checkout@v3
 
       - name: Test
         run: |
           cd ./tests
-          nix build -L -v --no-link '.#defaultPackage.${{ matrix.arch.nix }}'
+          nix build -L -v --no-link '.#defaultPackage.${{ matrix.runner.arch }}'
 
       - name: Build all packages
-        run: nix build -L -v '.#defaultPackage.${{ matrix.arch.nix }}'
+        run: nix build -L -v '.#defaultPackage.${{ matrix.runner.arch }}'
 
       - name: Cache all packages
         env:
-          NIX_OUTPUT: .#defaultPackage.${{ matrix.arch.nix }}
+          NIX_OUTPUT: .#defaultPackage.${{ matrix.runner.arch }}
         run: |
           nix store sign "${NIX_OUTPUT}" -v -r -k ~/.secrets/nix-cache-private-key
           nix copy -v "${NIX_OUTPUT}" --to s3://nixed/cache
