--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,7 +41,12 @@ jobs:
 
   build-push-images:
     timeout-minutes: 20
-    runs-on: self-hosted, nix, general, "${{ matrix.arch.runner }}-linux", medium]
+    runs-on: 
+      - self-hosted
+      - nix
+      - general
+      - ${{ matrix.arch.runner }}-linux
+      - medium
     needs: [build-packages]
     env:
       IMAGE_REPOSITORY: public.ecr.aws/shopstic
