--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build all packages
         run: |
-          nix build -L -v '.#defaultPackage.${{ matrix.runner.arch }}' 2>&1 >/dev/null | { grep -v "^evaluating file '" || true; }
+          nix build -L '.#defaultPackage.${{ matrix.runner.arch }}'
 
       - name: Cache all packages
         env:
