--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build all packages
         run: |
-          nix build -L '.#defaultPackage.${{ matrix.runner.arch }}'
+          nix build -v '.#defaultPackage.${{ matrix.runner.arch }}'
 
       - name: Cache all packages
         env:
