--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
             size: small
     defaults:
       run:
-        shell: nix develop -c bash {0}   
+        shell: nix develop -c bash {0} 2>&1 | { grep -v "^evaluating file '" || true }
     steps:
       - uses: actions/checkout@v3
 
