--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,6 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build all packages
+        shell: nix develop -v -c bash {0} 2>&1 | (grep -v "^evaluating file '" || true)
         run: |
           nix build -L -v '.#defaultPackage.${{ matrix.runner.arch }}' 2>&1 | (grep -v "^evaluating file '" || true)
 
@@ -33,8 +34,8 @@ jobs:
         env:
           NIX_OUTPUT: .#defaultPackage.${{ matrix.runner.arch }}
         run: |
-          nix store sign "${NIX_OUTPUT}" -v -r -k ~/.secrets/nix-cache-private-key
-          nix copy -v --to s3://nixed/cache "${NIX_OUTPUT}"
+          nix store sign "${NIX_OUTPUT}" -v -r -k ~/.secrets/nix-cache-private-key 2>&1 | (grep -v "^evaluating file '" || true)
+          nix copy -v --to s3://nixed/cache "${NIX_OUTPUT}" 2>&1 | (grep -v "^evaluating file '" || true)
 
   build-push-images:
     name: Build and push images
