--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,14 +27,14 @@ jobs:
 
       - name: Build all packages
         run: |
-          nix build -L -v '.#defaultPackage.${{ matrix.runner.arch }}' 2>&1 | (grep -v "^evaluating file '" || true)
+          nix build -L -v '.#defaultPackage.${{ matrix.runner.arch }}'
 
       - name: Cache all packages
         env:
           NIX_OUTPUT: .#defaultPackage.${{ matrix.runner.arch }}
         run: |
-          nix store sign "${NIX_OUTPUT}" -v -r -k ~/.secrets/nix-cache-private-key 2>&1 | (grep -v "^evaluating file '" || true)
-          nix copy -v --to s3://nixed/cache "${NIX_OUTPUT}" 2>&1 | (grep -v "^evaluating file '" || true)
+          nix store sign "${NIX_OUTPUT}" -v -r -k ~/.secrets/nix-cache-private-key
+          nix copy -v --to s3://nixed/cache "${NIX_OUTPUT}"
 
   build-push-images:
     name: Build and push images
