--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -61,6 +61,9 @@ jobs:
         run: |
           ./cli.sh build_all_images ${{ matrix.imageArch }}
 
+      - name: Debug
+        run: sleep 360000
+
       - name: Push all images
         if: github.ref == 'refs/heads/main'
         run: |
