--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,7 +34,8 @@ jobs:
           NIX_OUTPUT: .#defaultPackage.${{ matrix.runner.arch }}
         run: |
           nix store sign "${NIX_OUTPUT}" -v -r -k ~/.secrets/nix-cache-private-key
-          nix copy -v --to s3://nixed/cache "${NIX_OUTPUT}"
+          # nix copy -v --to s3://nixed/cache "${NIX_OUTPUT}"
+          ./cli.sh nix_copy_to_s3_cache "${NIX_OUTPUT}"
 
   build-push-images:
     name: Build and push images
