--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,8 +35,7 @@ jobs:
         shell: nix develop -c bash {0}
         run: |
           nix store sign "${NIX_OUTPUT}" -v -r -k ~/.secrets/nix-cache-private-key
-          # nix copy -v --to s3://nixed/cache "${NIX_OUTPUT}"
-          ./cli.sh nix_copy_to_s3_cache "${NIX_OUTPUT}"
+          nix copy -v --to s3://nixed/cache "${NIX_OUTPUT}"
 
   build-push-images:
     name: Build and push images
