--- a/pkgs/kysely-codegen/src/package.json
+++ b/pkgs/kysely-codegen/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kysely-codegen-bin",
-  "version": "0.8.0",
+  "version": "0.10.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "kysely": "^0.22.0",
-    "kysely-codegen": "0.8.0",
-    "pg": "^8.8.0"
+    "kysely": "0.26.3",
+    "kysely-codegen": "0.10.0",
+    "pg": "8.11.3"
   }
 }
