--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,12 +29,17 @@ jobs:
         run: |
           nix build -L -v '.#defaultPackage.${{ matrix.runner.arch }}'
 
+      - name: Pause
+        env:
+          NIX_OUTPUT: .#defaultPackage.${{ matrix.runner.arch }}
+        run: |
+          sleep 1000000
+
       - name: Cache all packages
         env:
           NIX_OUTPUT: .#defaultPackage.${{ matrix.runner.arch }}
         shell: nix develop -c bash {0}
         run: |
-          sleep 100000
           nix store sign "${NIX_OUTPUT}" -v -r -k ~/.secrets/nix-cache-private-key
           nix copy -v --to s3://nixed/cache "${NIX_OUTPUT}"
 
