--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,7 +34,7 @@ jobs:
           NIX_OUTPUT: .#defaultPackage.${{ matrix.runner.arch }}
         run: |
           nix store sign "${NIX_OUTPUT}" -v -r -k ~/.secrets/nix-cache-private-key
-          nix copy -v --to s3://nixed/cache "${NIX_OUTPUT}"
+          nix copy -v --to 's3://nixed/cache?compression=zstd&parallel-compression=true' "${NIX_OUTPUT}"
 
   build-push-images:
     name: Build and push images
