Set fail-fast: false

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,6 +50,7 @@ jobs:
     env:
       IMAGE_REPOSITORY: public.ecr.aws/shopstic
     strategy:
+      fail-fast: false
       matrix:
         imageArch: [amd64, arm64]
     defaults:
