--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,6 +49,7 @@ jobs:
     needs: [build-packages]
     env:
       IMAGE_REPOSITORY: public.ecr.aws/shopstic
+      NIXPKGS_ALLOW_INSECURE: 1
     strategy:
       fail-fast: false
       matrix:
@@ -76,6 +77,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     env:
       IMAGE_REPOSITORY: public.ecr.aws/shopstic
+      NIXPKGS_ALLOW_INSECURE: 1
     defaults:
       run:
         shell: nix develop -c bash {0}      
