--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,14 +35,13 @@ jobs:
           NIX_OUTPUT: .#defaultPackage.${{ matrix.runner.arch }}
         run: |
           nix store sign "${NIX_OUTPUT}" -v -r -k ~/.secrets/nix-cache-private-key
-          nix copy -v --to 's3://nixed/cache?compression=zstd&parallel-compression=true' "${NIX_OUTPUT}"
+          nix copy -v --to 's3://nix.wok.run/cache?compression=zstd&parallel-compression=true' "${NIX_OUTPUT}"
 
       - name: Cache some packages in S3
         env:
           BIN_ARCH: ${{ matrix.runner.arch }}
         shell: nix develop -c bash {0}
         run: |
-          sleep 10000
           ./cli.sh nix_copy_to_public_bin_cache "${BIN_ARCH}" ecr-credential-provider 1_24
 
   build-push-images:
