--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,12 +37,12 @@ jobs:
           nix store sign "${NIX_OUTPUT}" -v -r -k ~/.secrets/nix-cache-private-key
           nix copy -v --to "s3://${NIX_CACHE_BUCKET_NAME}/cache?region=${NIX_CACHE_BUCKET_REGION}&compression=zstd&parallel-compression=true" "${NIX_OUTPUT}"
 
-      - name: Cache some packages in S3
-        env:
-          BIN_ARCH: ${{ matrix.runner.arch }}
-        shell: nix develop -c bash {0}
-        run: |
-          ./cli.sh nix_copy_to_public_bin_cache "${BIN_ARCH}" ecr-credential-provider 1_24
+      # - name: Cache some packages in S3
+      #   env:
+      #     BIN_ARCH: ${{ matrix.runner.arch }}
+      #   shell: nix develop -c bash {0}
+      #   run: |
+      #     ./cli.sh nix_copy_to_public_bin_cache "${BIN_ARCH}" ecr-credential-provider 1_24
 
   build-push-images:
     name: Build and push images
