--- a/pkgs/deno-app-build/deno.json
+++ b/pkgs/deno-app-build/deno.json
@@ -1,12 +1,15 @@
 {
+  "lock": {
+    "frozen": true
+  },
   "imports": {
     "@deno/emit": "jsr:@deno/emit@^0.44.0",
-    "@std/assert": "jsr:@std/assert@^1.0.1",
-    "@std/fs": "jsr:@std/fs@^1.0.0",
+    "@std/assert": "jsr:@std/assert@^1.0.2",
+    "@std/fs": "jsr:@std/fs@^1.0.1",
     "@std/path": "jsr:@std/path@^1.0.2",
     "@wok/case": "jsr:@wok/case@^1.0.1",
     "@wok/typebox": "jsr:@wok/typebox@^0.32.36",
-    "@wok/utils": "jsr:@wok/utils@^1.4.0",
+    "@wok/utils": "jsr:@wok/utils@^1.6.0",
     "typescript": "npm:typescript@^5.5.4"
   }
 }
