--- a/pkgs/deno-app/deno.json
+++ b/pkgs/deno-app/deno.json
@@ -1,14 +1,15 @@
 {
   "imports": {
     "$shared/": "./_shared/",
-    "@deno/emit": "jsr:@deno/emit@^0.45.0",
-    "@std/assert": "jsr:@std/assert@^1.0.5",
-    "@std/fmt": "jsr:@std/fmt@^1.0.2",
-    "@std/fs": "jsr:@std/fs@^1.0.3",
-    "@std/path": "jsr:@std/path@^1.0.6",
-    "@wok/case": "jsr:@wok/case@^1.0.1",
-    "@wok/typebox": "jsr:@wok/typebox@^0.33.10",
-    "@wok/utils": "jsr:@wok/utils@^1.16.0",
-    "typescript": "npm:typescript@^5.6.2"
+    "@deno/emit": "jsr:@deno/emit@^0.46.0",
+    "@std/assert": "jsr:@std/assert@^1.0.11",
+    "@std/fmt": "jsr:@std/fmt@^1.0.4",
+    "@std/fs": "jsr:@std/fs@^1.0.10",
+    "@std/path": "jsr:@std/path@^1.0.8",
+    "@wok/case": "jsr:@wok/case@^1.0.2",
+    "@wok/schema": "jsr:@wok/schema@^2.2.0",
+    "@wok/typebox": "jsr:@wok/typebox@^1.1.0",
+    "@wok/utils": "jsr:@wok/utils@^4.2.4",
+    "typescript": "npm:typescript@^5.7.3"
   }
 }
