--- a/pkgs/typescript-eslint/src/package.json
+++ b/pkgs/typescript-eslint/src/package.json
@@ -1,6 +1,6 @@
   {
   "name": "typescript-eslint",
-  "version": "8.2.0",
+  "version": "8.21.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,9 +9,9 @@
   },
   "type": "module",
   "dependencies": {
-    "typescript": "^5.5.4",
-    "typescript-eslint": "^8.2.0",
-    "eslint": "9.9.0"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.21.0",
+    "eslint": "^9.15.0"
   },
   "devDependencies": {
     "npm-check-updates": "^17.1.0"
