--- a/pkgs/deno-ship/deno.json
+++ b/pkgs/deno-ship/deno.json
@@ -1,17 +1,18 @@
 {
   "imports": {
     "@deno/cache-dir": "jsr:@deno/cache-dir@^0.17.0",
-    "@deno/emit": "jsr:@deno/emit@^0.46.0",
+    "@deno/import-map": "https://deno.land/x/import_map@v0.21.0/mod.ts",
     "@deno/graph": "jsr:@deno/graph@^0.87.2",
     "@std/assert": "jsr:@std/assert@^1.0.11",
-    "@std/fmt": "jsr:@std/fmt@^1.0.4",
-    "@std/fs": "jsr:@std/fs@^1.0.10",
+    "@std/fmt": "jsr:@std/fmt@^1.0.5",
+    "@std/fs": "jsr:@std/fs@^1.0.11",
     "@std/path": "jsr:@std/path@^1.0.8",
     "@std/semver": "jsr:@std/semver@^1.0.3",
     "@wok/case": "jsr:@wok/case@^1.0.2",
+    "@wok/deup": "jsr:@wok/deup@^2.1.2",
     "@wok/schema": "jsr:@wok/schema@^2.2.0",
     "@wok/typebox": "jsr:@wok/typebox@^1.1.0",
-    "@wok/utils": "jsr:@wok/utils@^4.2.4",
+    "@wok/utils": "jsr:@wok/utils@^4.2.7",
     "type-fest": "npm:type-fest@^4.33.0",
     "typescript": "npm:typescript@^5.7.3"
   }
