--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -73,7 +73,7 @@ jobs:
   push-manifests:
     name: Build and push multi-arch manifests
     timeout-minutes: 20
-    runs-on: [self-hosted, nix, general, arm64-linux, small]
+    runs-on: [self-hosted, nix, general, amd64-linux, small]
     needs: [build-push-images]
     if: github.ref == 'refs/heads/main'
     defaults:
